# jobsity-de-interview-challenge

./: .env  .env.example  .gitignore  AGENTS.md  README.md  demo.sh  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  results.md
airflow/dags/: streaming_jobs.py
docker/: airflow.Dockerfile  api.Dockerfile
docs/: analysis-trips-gpt-en-us.md  architecture-en-us.md  de-challenge-context.md  plan.md  results.md  solution-architecture-proposal-en-us.md
docs/internals/: implementation-plan-sse-full-pipeline.md  presentation-script.md  results-sse-full-pipeline-phase1.md
scripts/manual_demo/: 1_setup_env.sh  2_start_stack.sh  3_reset_state.sh  4_init_airflow.sh  5_trigger_pipeline.sh  6_upload_csv.sh  7_watch_sse.sh  8_show_grouped_trips.sh  9_query_weekly_average.sh  _common.sh
sql/: bonus_queries.sql  init.sql
sql/migrations/: 001_add_ingestion_id_to_trips.sql
src/de_challenge/api/: main.py  sse.py
src/de_challenge/contract/: events.py
src/de_challenge/db/: postgres.py
src/de_challenge/domain/: dedup.py  identifiers.py  models.py  validation.py
src/de_challenge/ingestion/: csv_parser.py  producer.py  status.py
src/de_challenge/observability/: logging.py
src/de_challenge/spark/: job1.py  job2.py  transforms.py  (+1 more)
tests/: test_api_startup.py  test_csv_parser.py  test_dedup.py  test_event_schema.py  test_ingest_endpoint.py  test_sse_format.py  test_trip_id.py  test_validation.py  test_weekly_average.py
tests/integration/: test_postgis_schema.py
tests/spark/: test_job1_import.py  test_job1_silver_projection.py  test_spark_transforms.py
